--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,9 @@
             <li class="nav-item">
               <a class="nav-link" href="MyKitties.html" id="myKitties"><span id="kitty-font">My Kitties</span></a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Breed.html" id="myKitties"><span id="cyber-font-nav">Breed</span></a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span id="cyber-font-nav">Code</span>
