--- a/client/Breed.html
+++ b/client/Breed.html
@@ -79,7 +79,7 @@
         </button>
     </div>
 
-    <!-- Modal -->
+    <!-- Modals -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-xl modal-dialog-scrollable modal-dialog-centered">
         <div class="modal-content">
@@ -92,12 +92,12 @@
           <div class="modal-body">
             <div class="row">
               <div class="col-12">
-                <div class="flexBox" id="parents"></div>
+                <div class="flexBox parents"></div>
               </div>
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
             <button type="button" id="saveButton" class="btn btn-primary">Save changes</button>
           </div>
         </div>
